crates/pcb-zen-core/tests/snapshots/file__file_consistent_with_load.snap
---
source: crates/pcb-zen-core/tests/file.rs
assertion_line: 51
expression: output
---
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
    },
}
[]
