crates/pcb-zen-core/tests/snapshots/file__file_fails_for_nonexistent.snap
---
source: crates/pcb-zen-core/tests/file.rs
expression: output
---
Error: test.zen:6:1-24 Failed to resolve file path 'nonexistent.txt': File not found: /nonexistent.txt
