crates/pcb-zen-core/tests/snapshots/file__file_resolves_from_subdirectory.snap
---
source: crates/pcb-zen-core/tests/file.rs
assertion_line: 36
expression: output
---
{
    <root>: Module {
        path: <root>,
        source: "subdir/test.zen",
    },
}
[]
