crates/pcb-zen-core/tests/snapshots/file__file_resolves_relative_path.snap
---
source: crates/pcb-zen-core/tests/file.rs
expression: output
---
Resolved path: package://test/subdir/data.txt
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
    },
}
[]
