crates/pcb-zen-core/tests/snapshots/file__file_works_for_directory.snap
---
source: crates/pcb-zen-core/tests/file.rs
assertion_line: 26
expression: output
---
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
    },
}
[]
